--- a/weatherApp/weather/templates/weather/weather.html
+++ b/weatherApp/weather/templates/weather/weather.html
@@ -1,4 +1,17 @@
- <form action="" method="POST">{% csrf_token %}
-      {{form.as_p}}
-      <button type="submit">Submit</button>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+</head>
+<body>
+  <div class="container">
+  {% load crispy_forms_tags %}
+
+    <form method="POST">{% csrf_token %}
+      {{form|crispy }}
+          <button type="submit" class="btn btn-primary">Submit</button>
   </form>
+  </div>
+</body>
+</html>
