--- a/weatherApp/weather/templates/weather/weather.html
+++ b/weatherApp/weather/templates/weather/weather.html
@@ -13,7 +13,7 @@
           <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 
-  <h3> Weather Results<h3>
+  <h3> Weather Results<h3> <br/>
   {% if results %}
   {% for item in results %}
   <p> {{item}}</P>
